Closed Bug 305944 Opened 21 years ago Closed 21 years ago

menus in vb3.0.x no longer working

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: sharparrow1)

References

()

Details

(Keywords: regression, testcase)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050825 SeaMonkey/1.0a Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050825 SeaMonkey/1.0a After trying Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050825 SeaMonkey/1.0a the menus in vBulletin 3.0.x no longer work. When visiting the example above, you should be able to switch the display mode. It worked with the 20050814 nightly and it works with Firefox 1.0.6. The strange thing is, that the new vBulletin 3.5 RCs work without a problem. Reproducible: Always Steps to Reproduce: 1. Go to a thread in a vBulletin3.0.x Forum 2. Try to switch the display mode Actual Results: Seamonkey doesn't recognize the menu, like it's only visible to the user but not at the top of the click hierarchy (if one could call it so ;-)) Expected Results: Make the different menu points usable like before.
The latest firefox nightly Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050825 Firefox/1.6a1 fails too. Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b4) Gecko/20050825 Firefox/1.0+ is working as expected, so it's probably a error in Gecko after the branching of 1.8. Aqua
Component: General → Event Handling
Product: Mozilla Application Suite → Core
Version: unspecified → 1.8 Branch
works in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050822 Firefox/1.6a1 fails in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050823 Firefox/1.6a1 checkins: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2005-08-22+16%3A00%3A00&maxdate=2005-08-23+17%3A00%3A00&cvsroot=%2Fcvsroot
Keywords: regression
Version: 1.8 Branch → Trunk
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20050825 Firefox/1.6a1 ID:2005082510 Don't see a dupe of this. Confirming. This still occurs with bfcache off.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050826 Firefox/1.6a1 Confirming for this build. I am a mod for a forum running vBulletin Version 3.0.7 and the drop down menus no longer work. You can drop a menu down, but you cannot select anything.
Attached file testcase —
Clipping is broken. The background-color of the link should become green when hovered over. It only happens when hovering over the last 10 pixels of the left of the link. That's no coincidence, I think. See the css code: left: 390px; clip: rect(auto, 400px, 80px, auto);
So, looking at the regression range again, I think this is a regression from fixing bug 296036.
Depends on: 296036
Keywords: testcase
Attached patch Patch — — Splinter Review
My fault; I should have been more careful. I misread ComputeClipRect.
Assignee: general → sharparrow1
Status: NEW → ASSIGNED
Attachment #193989 - Flags: review?(roc)
Blocks: 306179
Blocks: 306218
I just want to say that I experience the same problem with todays Firefox (OS X) and Camino trunk builds. The JavaScript menus at https://www.skandiabanken.no dont work properly, but after applying the above patch it works again! As posted in bug 306218
When will the patch be checked in? Bruno
checked in
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
SeaMonkey: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050901 SeaMonkey/1.1a Firefox: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20050901 Firefox/1.6a1 ID:2005090116 Confirming both UAs now work as expected.
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: