Bug 305944. Fix handling of event clipping regression. r+sr=roc, patch by Eli Friedman